[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/message.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu_layer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Jack_Armstrong_BB.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -24
font_data = ExtResource( 3 )

[node name="menu_layer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="start_menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="start_message" type="TextureRect" parent="start_menu"]
anchor_left = 0.212
anchor_top = 0.142
anchor_right = 0.787
anchor_bottom = 0.61
margin_left = 0.23999
margin_top = -0.268005
margin_right = 0.23996
margin_bottom = 0.0599976
texture = ExtResource( 1 )

[node name="game_over_menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="game_over_menu"]
anchor_left = 0.144
anchor_top = 0.171
anchor_right = 0.852
anchor_bottom = 0.426
margin_left = -0.120003
margin_top = -1.034
margin_right = 0.039978
margin_bottom = 0.195984
custom_constants/separation = 15
alignment = 1

[node name="score_label" type="Label" parent="game_over_menu/VBoxContainer"]
margin_right = 340.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.984314, 0.866667, 0.0666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "SCORE: 0"
align = 1

[node name="high_score_label" type="Label" parent="game_over_menu/VBoxContainer"]
margin_top = 72.0
margin_right = 340.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.984314, 0.866667, 0.0666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "BEST: 0"
align = 1

[node name="restart_button" type="Button" parent="game_over_menu/VBoxContainer"]
margin_top = 144.0
margin_right = 340.0
margin_bottom = 219.0
rect_min_size = Vector2( 340, 75 )
custom_colors/font_color = Color( 0.984314, 0.866667, 0.0666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="game_over_menu/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
